# corner29

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  nginx.conf  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  settings.local.json
dxf-svg/: .gitignore  README.md  basement_bands.json  basement_names.json  convert.py  normalize_viewboxes.py  pyproject.toml  split_svg.py
scripts/: build-prod.mjs  optimize-svgs.mjs
src/: app.css  app.html
src/lib/: content.ts  floor-prefetch.ts  geometry.ts  variants.ts
src/lib/components/: CameraPinLayer.svelte  ContactForm.svelte  FacadeShowcase.svelte  FloorPlanViewer.svelte  FloorSlider.svelte  Gallery.svelte  Lightbox.svelte  LocationMap.svelte  SectionNav.svelte  ThemeToggle.svelte  VariantMenu.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/design/architectural/: +page.svelte
src/routes/design/boutique/: +page.svelte
src/routes/design/boutique-tabs/: +page.svelte
src/routes/design/editorial/: +page.svelte
src/routes/design/editorial-tabs/: +page.svelte
src/routes/tools/pin-editor/: +page.svelte  +page.ts
