[project]
name = "dxf-svg"
version = "0.1.0"
description = "Convert a DXF file into one SVG per detected drawing"
requires-python = ">=3.10"
dependencies = [
    # ezdxf ships the native SVG backend; >=1.3 for stable Layout/Settings API.
    "ezdxf>=1.3.0",
    # Optional: only needed if you pass --backend matplotlib.
    # Comment out if you never need the fallback.
    "matplotlib>=3.7",
]

[project.scripts]
dxf-svg = "convert:main"

[tool.ruff]
line-length = 100
target-version = "py310"
